--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --ptimary-text-color:#757575;
     --title-text-color:#212121;
     --accent-color: #2196F3;
+    --hover-accent-color: #188CE8;
     --background-header-color: #FFFFFF; 
     --logo-color: #000000; 
     --background-hero-color: #2F303A; 
@@ -43,7 +44,7 @@ body {
     color:var(--logo-color);
    
     }
-.list, .link, .link-mail, .link-tel, .site-nav-list,
+.header-link, .list, .link, .link-mail, .link-tel, .site-nav-list,
 .contact-nav-list, .button-list {
     display: flex;
     list-style: none;
@@ -52,7 +53,7 @@ body {
     transition-property:color;
     transition: var(--transition-func);
     }
-.link, .link-mail, .link-tel {
+.header-link, .link, .link-mail, .link-tel {
  
     text-decoration: none;
     color: inherit;
@@ -61,8 +62,8 @@ body {
     line-height: 1.17;
     letter-spacing: 0.02em;
     }
-.site-nav-list .link:hover,
-.site-nav-list .link:focus {
+.site-nav-list .header-link:hover, .link:hover,
+.site-nav-list .header-link:hover, .link:focus {
     color: var(--accent-color); 
    
     }
@@ -72,11 +73,11 @@ body {
 .link-tel:focus{
     color: var(--accent-color); 
 }
-.link.current {
+.header-link.current {
     position: relative;
     color: var(--accent-color);
   }
-.link.current:after {
+.header-link.current:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -127,7 +128,7 @@ img {
     border:1px solid var(--header-border);
     }
 /*--------------site nav--------------*/
-.link {
+.header-link {
     padding: 32px 0;
     color: var(--title-text-color) ;
     }
@@ -233,8 +234,9 @@ img {
     height: 50px;
     }
 .button:hover, .button:focus {
-    background-color: var(--accent-color);
+    background-color: var(--hover-accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    transition: color var(--transition-func);
 }
 .button-list {
     display: flex;
@@ -589,14 +591,15 @@ img {
     width: 200px;
     height: 50px;
     color: var(--hero-color);
-    background:var(--accent-color);
+    background-color:var(--accent-color);
     border: var(--accent-color);
     border-radius: 4px;
     cursor: pointer;
 }
 .footer-form-submit:hover, .footer-form-submit:focus {
-    background:var(--accent-color);
+    background-color:var(--hover-accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: color var(--transition-func);
 }
 
 .visually-hidden {
@@ -780,14 +783,16 @@ outline: var(--accent-color);
     width: 200px;
     height: 50px;
     color: var(--hero-color);
-    background:var(--accent-color);
+    background: var(--accent-color);
     border: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
 }
 .modal-form-submit:hover, .modal-form-submit:focus {
+    background-color: var(--hover-accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: color var(--transition-func);
 }
 .link-form{
     color: var(--accent-color);
